--- a/css/styleApp.css
+++ b/css/styleApp.css
@@ -80,7 +80,7 @@
 
         .chat-header {
             padding: 5px;
-            background: var(--header);
+            background: rgba(0,0,0,0.3);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -442,6 +442,7 @@
 		
 		.pinned-message .msg-text{
 			max-height: 30px;
+			max-width: 150px;
 			 white-space: nowrap;
 			 overflow: hidden;
 			 text-overflow: ellipsis;
@@ -851,7 +852,7 @@
 	Display: flex;
 	justify-content: center;
 	width: 100%;
-	padding: 10px;
+	padding: 5px;
 	gap: 5px;
 }
 
