--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ img{border-style: none;}
   -webkit-tap-highlight-color: transparent;
 }
 
-input:focus, textarea:focus {
+input:focus {
   outline: none;
 }
 
@@ -69,6 +69,9 @@ input:focus, textarea:focus {
 		max-height: 200px!important;
 	}
 	
+	.chat-body{
+		zoom: 70%;
+	}
 
 }
 
@@ -238,21 +241,11 @@ input:focus, textarea:focus {
     justify-content: center;
     align-items: center;
     z-index:calc(infinity);
-    transition: opacity 1s ease-in-out;
-}
-
-#loading-page{
-background-color: rgba(0, 0, 0, 0.1);	
+    transition: opacity 0.5s ease-in-out;
 }
 
 .loader {
     text-align: center;
-}
-
-#loading-page .loader {
-    display: flex;
-	align-items: center;
-	gap: 5px;
 }
 
 .spinner {
@@ -308,16 +301,11 @@ input{
 	background: rgba(255, 255, 255, 0.3);
 }
 
-
-
-input::placeholder {
-  color: #fff;
-  font-size: 10px;
-  font-style: italic;
-  padding-left: 10px;
+textarea{
+	opacity:0;
 }
 
-textarea::placeholder {
+input::placeholder {
   color: #fff;
   font-size: 10px;
   font-style: italic;
