--- a/css/styleApp.css
+++ b/css/styleApp.css
@@ -7,6 +7,7 @@
         }
 
 
+
 		#key-input{
 			color: #00ccff;
 		}
@@ -110,13 +111,14 @@
 			width: 100%;
 			height: 100%;
             overflow-y: auto;
+            padding: 10px;
             display: flex;
             flex-direction: column;
-            background: linear-gradient(to bottom right , #009999 0%, #0099cc 100%);
-			border: 1px solid transparent;
+            background: #0099cc;
 			gap: 10px;		
 			position: relative;
-			zoom: 90%;
+			border: 1px solid #000;
+			zoom: 80%;
 			padding: 5% 20%;
         }
 		
@@ -127,11 +129,6 @@
 			}
 		}
 		@media screen and ( max-width: 1023px ){
-			#scroll-to-bottom{
-			right: 10px!important;
-			bottom: 40px!important;
-		}	
-		
 			.chat-body {
 				zoom: 110%;
 			}
@@ -147,43 +144,33 @@
 			.reply-preview{
 				zoom: 100%;
 			}
+			
 		}
 		
-		@media screen and ( max-width: 550px ){		
+		@media screen and ( max-width: 450px ){
 			.chat-body {
-				padding: 5% 15%;
+				padding: 5% 10%;
 			}
-		}
+		}	
+			
         .chat-input {
 			width: 100%;
             padding: 5px;
-            background: rgba(0, 0, 0, 0.15) ;
+            display: flex;
+			justify-content: space-between;
+            gap: 8px;
+            align-items: center;
 			position: relative;
-			display: flex;
-			align-items: flex-end;
-			box-sizing: border-box;
-			gap: 5px;
         }
 
         .message-input {
 			width: 100%;
-			height: 30px;
-			padding: 5px;
-            background-image: linear-gradient(to right, #004d4d, #006666, #008080, #009999) !important;
+			padding:5px;
             color: var(--text);
             font-size: 12px;
-            border-radius: 15px;
-			overflow: hidden;
-			border: 3px inset #000;
-            max-height: 100px;
-            resize: none;
-			position: relative;
+            margin-right: 0px;
+			border-radius: 5px;
         }
-		
-			/* Optional: Adjust height automatically */
-			.message-input:focus {
-				height: auto;
-			}		
 
         .message {
 			font-size: 10px;
@@ -201,7 +188,6 @@
 			justify-content:center;
 			font-size: 12px;
 			animation: heartbeat 1s infinite;
-			white-space: pre-wrap;
 		}		
 		
 		.fa-comment {
@@ -379,12 +365,6 @@
 			font-style: italic;
         }
 		
-		.username-reply{
-			color: #00cc99;
-			text-shadow: 1px 1px #000;
-			font-weight: bold;
-		}
-		
 		.badge-chat{
 			display: flex;
 			align-items: center;
@@ -448,7 +428,7 @@
 
         .reply-indicator {
 			padding: 3px;
-			border-left: 5px solid rgba(255, 150, 0, 0.6);
+			border-left: 5px solid orange;
 			background-color: rgba(200, 100, 100, 0.2);
 			transition: all 0.2s;
 			font-size: 10px;
@@ -457,16 +437,6 @@
 			gap: 2px;
 			box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.5);
         }
-		
-		.replyTo-header{
-			display: flex;
-			align-items: center;
-			justify-content: left;
-			padding: 5px;
-			gap: 5px;
-			font-size: 10px;
-			color: #ffcc66;
-		}
 
 		.reply-indicator .country-flag{
 			width: 10px;
@@ -475,13 +445,20 @@
 		
         .reply-content {
 			background-color: rgba(0, 0, 0, 0.2);
-			padding: 5px;
+			padding: 3px;
 			margin: 3px 5px 3px 5px;
 			border-radius: 5px;
+			color: #ffcc99;
         }
 		
-		.reply-username{
+		.username-reply{
 			color: #00cc99;
+			text-shadow: 1px 1px #000;
+			font-weight: bold;
+		}
+		
+		.reply-username{
+			color: orange;
 		}
 		
 		.reply-msg{
@@ -500,19 +477,11 @@
 		}		
 		
 		#pinned-message-container {
-		background-image: linear-gradient(to right, #004d4d, #006666, #008080, #009999) !important;
 		max-width:100%;
-		box-shadow: 0 0 5px 5px rgba(0,0,0,0.3);
 	}
-	
-		.username-pin{
-			margin-left: 5px;
-			color: #00cc99;
-			font-size: 14px;
-			text-shadow: 1px 1px #000;
-		}
 
         .pinned-message {
+            border-left: 4px solid #00ccff;
             padding: 3px;
 			position: relative;
 			zoom: 75%;
@@ -524,15 +493,15 @@
 		
 		.pinned-message .msg-text{
 			max-height: 30px;
-			max-width: 200px;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			color: #fff;
-			border-radius: 5px;
-			padding: 5px;
-			margin: 5px 0 0 10px;
-			background: rgba(0, 0, 0, 0.15) ; 
+			max-width: 150px;
+			 white-space: nowrap;
+			 overflow: hidden;
+			 text-overflow: ellipsis;
+			 color: #fff;
+			 background: rgba(25, 125, 125, 0.3);	
+			 border-radius: 5px;
+			 padding: 5px;
+			 margin: 5px 0 0 10px;
 		}
 		
 		.pinned-message:hover .msg-text{
@@ -543,6 +512,13 @@
 			 font-size: 12px;
 			 margin-left: 10px;
 			 color: #fff;	 
+		}
+		
+		#pin-by span{
+			margin-left: 5px;
+			color: #00ccff;
+			font-size: 14px;
+			text-shadow: 1px 1px #000;
 		}
 		
 		#unpin-message{
@@ -615,10 +591,19 @@
             cursor: pointer;
             opacity: 0.7;
             transition: opacity 0.2s;
+			background-image: linear-gradient(to right, 
+			rgba(0, 50, 100, 0.7), 
+			rgba(0, 60, 120, 0.7), 
+			rgba(0, 70, 140, 0.7), 
+			rgba(0, 80, 160, 0.7), 
+			rgba(0, 90, 180, 0.7), 
+			rgba(0, 100, 200, 0.7), 
+			rgba(0, 110, 220, 0.7), 
+			rgba(0, 120, 240, 0.7), 
+			rgba(0, 130, 250, 0.7));
 			color: #fff;
 			padding: 3px 6px;
 			border-radius: 5px;
-			background-image: linear-gradient(to right, #004d4d, #006666, #008080, #009999) !important;
         }
 
         .chat-btn:hover {
@@ -701,42 +686,10 @@
 			height: 100%;
 			overflow-y: auto;
 		}
-		
-		.online-mobileScreen{
-			background: rgba(0,0,0,0.3);
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			gap: 2px;
-			padding:2px 0 2px 0;
-		}
-		
-		.on-off-online-panel{
-			width: 100%;
-		}
-		
-		#show-online{
-			width: 100%;
-			display: none;
-			padding:5px 0 5px 0;
-		}
-		
-		#close-online{
-			width: 100%;
-			padding:5px 0 5px 0;
-		}
-		
 		.online-mobileScreen #online-panel{
 			color: white;
 			position: relative;
 			overflow-y: scroll;	
-			background-image: linear-gradient(to right, #004d4d, #006666, #008080, #009999) !important;
-			box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.5);
-			border: 2px outset rgba(0,0,0,0.3);
-			border-radius:5px;
-			width: 99%;
-			
 		}
 
 		.chat-notification-container {
@@ -967,7 +920,14 @@
 		}
 
 
-
+.replyTo-header{
+	display: flex;
+	align-items: center;
+	justify-content: right;
+	gap: 5px;
+	font-size: 10px;
+	color: #ffcc99;
+}
 
 
 
