--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ img{border-style: none;}
   -webkit-tap-highlight-color: transparent;
 }
 
-input:focus {
+input:focus, textarea:focus {
   outline: none;
 }
 
@@ -69,9 +69,6 @@ input:focus {
 		max-height: 200px!important;
 	}
 	
-	.chat-body{
-		zoom: 70%;
-	}
 
 }
 
@@ -241,11 +238,21 @@ input:focus {
     justify-content: center;
     align-items: center;
     z-index:calc(infinity);
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+
+#loading-page{
+background-color: rgba(0, 0, 0, 0.1);	
 }
 
 .loader {
     text-align: center;
+}
+
+#loading-page .loader {
+    display: flex;
+	align-items: center;
+	gap: 5px;
 }
 
 .spinner {
@@ -301,11 +308,16 @@ input{
 	background: rgba(255, 255, 255, 0.3);
 }
 
-textarea{
-	opacity:0;
-}
+
 
 input::placeholder {
+  color: #fff;
+  font-size: 10px;
+  font-style: italic;
+  padding-left: 10px;
+}
+
+textarea::placeholder {
   color: #fff;
   font-size: 10px;
   font-style: italic;
@@ -354,10 +366,12 @@ input::placeholder {
 	background: linear-gradient(to left, #3399ff 0%, #ff9900 100%);
 }
 
-.cm-relative ::-webkit-scrollbar {width: 10px;}
+
+
+
+.cm-relative ::-webkit-scrollbar {width: 14px; }
 .cm-relative ::-webkit-scrollbar-track {background: transparent; }
-.cm-relative ::-webkit-scrollbar-thumb {background: #fff; border:3px #000;border-style:outset; }
-.cm-relative ::-webkit-scrollbar-thumb:hover {background: #555; }
+.cm-relative ::-webkit-scrollbar-thumb {background: #fff; border:3px #000;border-style:outset; cursor:pointer; border-radius:50%}
 #live-res .cm-relative ::-webkit-scrollbar-thumb {background: #53ff1a; border:3px #000;border-style:outset; }
 #ver-res .cm-relative ::-webkit-scrollbar-thumb {background: #ffff00; border:3px #000;border-style:outset; }
 #disabled-res .cm-relative ::-webkit-scrollbar-thumb {background: #ff0000; border:3px #000;border-style:outset; }
@@ -1016,6 +1030,57 @@ welcome-overlay{
 	top:0;
 	left:0;
 }
+
+#cm-relative-input{
+			position: relative;
+		}
+		
+		#scurity-duplicate-mail{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			display: none;
+		}
+		
+		#scurity-duplicate-mail-c{
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			box-sizing: border-box;
+		}
+		
+		#duplicate-count-c{
+			width: 100%;
+			height: 25px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background: #000;
+			color: red;
+		}
+		
+		#duplicate-count{
+			color: #fff;
+			margin-left: 5px;
+		}
+		
+		#duplicate-emails{
+			width: 100%;
+			height: 100%;
+			background: #000;
+			color: red;
+			resize: none;
+			padding: 5px;
+			font-size: 12px;
+		}
+		
+		#remove-duplicates{
+			width: 100%;
+			height: 25px;
+		}
 
 
 
